
	* configure.ac: in packager mode make it default to --without-pkgreg
	since this is what most packagers will want.

	* configure.ac: add a test to detect if there is an old copy of
	config.h hanging around that might mess up the build. Also remove the
	-C-D__signed=signed option to c2hs since the c2hs lexer has recognised
	__signed as an alias of signed for quite some time now.

2005-06-1 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/c2hs/c/CLexer2.x, tools/c2hs/c/CParser2.y: various tidying up;
	remove debugging code, remove unused code. Do some operations slightly
	more strictly. Add better error reporting facilites to the lexer /
	parser monad and use that do do propper error messages like in the
	original lexer and parser.

	* gtk/Graphics/UI/Gtk/Multiline/TextIter.chs.pp: change an #elif with
	an empty condition to a normal #else since older versions of gcc's cpp
	traditional mode do not like the former construct.

2005-06-01 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, configure.ac: Turn alex and happy into variables. 
	Only check for these if we are building the local c2hs.
	
2005-05-31 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/c2hs/c/CLexer2.x: a new alex based C lexer.
	
	* tools/c2hs/c/CParser2.y: a new happy based C parser.

	* tools/c2hs/state/Switches.hs, tools/c2hs/toplevel/Main.hs: add a
	command line flag to switch beteen the old and new parsers. Also add
	an extra dump kind which dumps the C AST after parsing.

	* tools/c2hs/c/CAST.hs, tools/c2hs/base/syms/Attributes.hs, 
	tools/c2hs/c/CPretty.hs: make the C AST showable and remove the
	existing Show instance which used the pretty printer (used in error
	messages). This change is only for the purposes	of testing the new
	parser and is not permanent.

	* tools/c2hs/c/C.hs: switch between the two lexer & parser
	implementations at runtime depending on the command line flag. Change
	the tracing message so we can be sure which parser implementation is